# seiza

./: .gitignore  Cargo.toml  README.md  RELEASE.md
.cargo/: config.toml
.github/: dependabot.yml
.github/scripts/: assert-static-crt.ps1  test-windows-installer.ps1
.github/workflows/: ci.yml  python-wheels.yml  release.yml
docs/: SATELLITE_MIRROR.md
docs/benchmarks/: 2026-07-astap-comparison.md  2026-07-blind-pipeline-priorities.md  2026-07-catalog-zstd.md  2026-07-cone-search-optimization.md  2026-07-deconvolution-corpus.md  2026-07-sip-real-field-validation.md
docs/design/: astap-mode.md  background-extraction.md  catalog-bundles.md  catalog-lookup.md  color-composition.md  data-paths.md  deconvolution.md  fits-streaming-io.md  image-stacking.md  ml-restoration-training.md  objects-bin-v2.md  objects-bin-v3.md  objects-bin-v4.md  rank-robust-matching.md  remote-server-protocol.md  satellite-tracks.md  siril-integration.md  solve-field-mode.md  star-identifiers.md  stretching.md  worker-protocol.md
packaging/windows/: License.rtf  Product.wxs  README.md  seiza.wixproj
seiza/: Cargo.toml  README.md
seiza-background/: Cargo.toml  README.md
seiza-background/src/: lib.rs
seiza-cabi/: Cargo.toml  README.md  build.rs  cbindgen.toml
seiza-cabi/include/: seiza_cabi.h
seiza-cabi/src/: lib.rs
seiza-cli/: Cargo.toml  README.md  build.rs
seiza-cli/src/: astap.rs  background.rs  build_data.rs  color.rs  common.rs  data_paths.rs  deconvolution.rs  download_data.rs  lib.rs  main.rs  master.rs  preview.rs  provenance.rs  server_main.rs  setup.rs  solve_field.rs  stack.rs  stretch_command.rs  worker.rs
seiza-cli/tests/: background.rs  catalog_query.rs  color_composition.rs  hosted_integration.rs  stretch.rs  worker_protocol.rs
seiza-deconvolution/: Cargo.toml  README.md
seiza-deconvolution/src/: lib.rs
seiza-download/: Cargo.toml  README.md
seiza-download/src/: bundle.rs  catalog.rs  error.rs  lib.rs  manager.rs  manifest.rs
seiza-fits/: Cargo.toml  README.md
seiza-fits/examples/: io_profile.rs
seiza-fits/src/: bayer.rs  header.rs  lib.rs  stats.rs  stretch.rs  writer.rs
seiza-imgproc/: Cargo.toml  README.md
seiza-imgproc/src/: blur.rs  border.rs  canny.rs  contours.rs  dtfilter.rs  lib.rs  morphology.rs  threshold.rs  wavelets.rs
seiza-imgproc/tests/: golden.rs
seiza-py/: Cargo.toml  README.md  pyproject.toml  seiza.pyi
seiza-py/src/: arrays.rs  background.rs  color.rs  deconvolution.rs  imgproc.rs  lib.rs  satellites.rs  stacking.rs  stretch.rs
seiza-py/tests/: test_astropy_crossval.py  test_background.py  test_color.py  test_data_paths.py  test_deconvolution.py  test_imgproc.py  test_satellites.py  test_solve.py  test_stacking.py  test_stretch.py
seiza-satellites/: Cargo.toml  README.md
seiza-satellites/src/: cache.rs  history.rs  lib.rs  mirror.rs  resolver.rs  source.rs  trail_alignment.rs
seiza-satellites/tests/: celestrak_live.rs  satchecker_live.rs
seiza-satellites/tests/data/: iss-2024.tle
seiza-sources/: Cargo.toml  README.md
seiza-sources/src/: lib.rs
seiza-stacking/: Cargo.toml  README.md
seiza-stacking/src/: calibration.rs  color.rs  fits.rs  image.rs  lib.rs  master.rs  normalization.rs  paths.rs  registration.rs  stack.rs
seiza-stats/: Cargo.toml  README.md
seiza-stats/src/: lib.rs
seiza-stretch/: Cargo.toml  README.md
seiza-stretch/src/: lib.rs
seiza-xisf/: Cargo.toml  README.md
seiza-xisf/examples/: xisf_info.rs
seiza-xisf/src/: lib.rs  writer.rs
seiza/examples/: mb_validate.rs
seiza/src/: blind.rs  catalog.rs  data_paths.rs  detect.rs  lib.rs  minor_bodies.rs  object_catalog_v3.rs  object_catalog_v4.rs  objects.rs  solve.rs  star_ids.rs  wcs.rs
seiza/src/catalog/: tiles.rs
