[workspace]
resolver = "3"
members = ["seiza", "seiza-cli", "seiza-download", "seiza-fits", "seiza-sources"]

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/theatrus/seiza"
authors = ["Yann Ramin <github@theatr.us>"]

[workspace.dependencies]
seiza = { path = "seiza", version = "0.5.0" }
seiza-download = { path = "seiza-download", version = "0.1.0" }
seiza-fits = { path = "seiza-fits", version = "0.1.5" }
seiza-sources = { path = "seiza-sources", version = "0.1.0" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
imageproc = "0.27"
flate2 = "1"
tar = "0.4"
fs2 = "0.4"
futures-util = "0.3"
directories = "6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde = { version = "1", features = ["derive"] }
ureq = { version = "3", features = ["json", "multipart"] }
serde_json = "1"
csv = "1"
postcard = { version = "1", features = ["use-std"] }
memmap2 = "0.9"
sha2 = "0.11"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt", "time"] }
rayon = "1"
rustc-hash = { version = "2" }
wide = "1.5"
multiversion = "0.8"
