[workspace]
resolver = "3"
members = [
    "seiza",
    "seiza-background",
    "seiza-cabi",
    "seiza-cli",
    "seiza-deconvolution",
    "seiza-download",
    "seiza-fits",
    "seiza-satellites",
    "seiza-stacking",
    "seiza-stretch",
    "seiza-sources",
]

[workspace.package]
version = "0.11.2"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
repository = "https://github.com/theatrus/seiza"
authors = ["Yann Ramin <github@theatr.us>"]

[workspace.dependencies]
seiza = { path = "seiza", version = "0.11.2" }
seiza-background = { path = "seiza-background", version = "0.1.0" }
seiza-deconvolution = { path = "seiza-deconvolution", version = "0.1.0" }
seiza-download = { path = "seiza-download", version = "0.5.0" }
seiza-fits = { path = "seiza-fits", version = "0.1.6" }
seiza-satellites = { path = "seiza-satellites", version = "0.4.1" }
seiza-stacking = { path = "seiza-stacking", version = "0.1.0" }
seiza-stretch = { path = "seiza-stretch", version = "0.1.0" }
seiza-sources = { path = "seiza-sources", version = "0.2.0" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
thiserror = "2"
anyhow = "1"
async-compression = { version = "0.4.42", features = ["tokio", "zstd"] }
clap = { version = "4", features = ["derive"] }
imageproc = "0.27"
flate2 = "1"
tar = "0.4"
fs2 = "0.4"
futures-util = "0.3"
directories = "6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "gzip"] }
serde = { version = "1", features = ["derive"] }
ureq = { version = "3", features = ["json", "multipart"] }
serde_json = "1"
csv = "1"
toml = "1"
postcard = { version = "1", features = ["use-std"] }
memmap2 = "0.9"
sha2 = "0.11"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt", "time"] }
tokio-util = { version = "0.7.18", features = ["io"] }
zstd = "0.13.3"
rayon = "1"
rustc-hash = { version = "2" }
wide = "1.5"
multiversion = "0.8"
satkit = { version = "0.20.2", default-features = false }
font8x8 = "0.3"
