[package]
name = "seiza-cabi"
description = "C ABI for Seiza: FITS rendering, plate solving, and catalog setup for native apps"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# cdylib for the Windows (.NET) app, staticlib for the macOS (Swift) app, rlib
# so the crate can also be used from Rust tests and consumers.
[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
seiza = { workspace = true, features = ["downloads"] }
seiza-fits = { workspace = true }
seiza-stretch = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["net", "rt", "time"] }

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
tempfile = "3"
