[package]
name = "seiza-cabi"
description = "C ABI for Seiza: image processing, plate solving, and catalog setup for native apps"
# Tracks the workspace umbrella version (0.11.x), not the 0.1.0 of the newer
# sibling crates.
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# cdylib for the Windows (.NET) app, staticlib for the macOS (Swift) app, rlib
# so the crate can also be used from Rust tests and consumers.
[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
seiza = { workspace = true, features = ["downloads"] }
seiza-background.workspace = true
seiza-deconvolution.workspace = true
seiza-fits = { workspace = true }
seiza-xisf = { workspace = true }
seiza-stacking = { workspace = true }
seiza-stretch = { workspace = true }
image = { workspace = true, features = ["tiff"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net"] }

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
tempfile = "3"
