[package]
name = "seiza-cli"
description = "Command-line interface for seiza: star detection, plate solving, and dataset management"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["astronomy", "astrophotography", "plate-solving", "astrometry", "cli"]
categories = ["science", "command-line-utilities"]

[[bin]]
name = "seiza"
path = "src/main.rs"

[dependencies]
seiza.workspace = true
seiza-download.workspace = true
seiza-fits.workspace = true
seiza-sources.workspace = true
anyhow.workspace = true
clap.workspace = true
image = { workspace = true, features = ["png", "jpeg", "tiff"] }
imageproc.workspace = true
flate2.workspace = true
serde_json.workspace = true
serde.workspace = true
csv.workspace = true
sha2.workspace = true
tokio.workspace = true
ureq.workspace = true

[dev-dependencies]
tempfile = "3"

[package.metadata.generate-rpm]
summary = "Star detection, plate solving, and astro dataset tools"
assets = [
    { source = "target/release/seiza", dest = "/usr/bin/seiza", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/seiza-cli/README.md", mode = "644", doc = true },
    { source = "LICENSE", dest = "/usr/share/licenses/seiza-cli/LICENSE", mode = "644" },
]

[package.metadata.deb]
maintainer = "Yann Ramin <github@theatr.us>"
extended-description = "Star detection, hinted and blind plate solving, and star/object dataset management for astrophotography."
section = "science"
assets = [
    ["target/release/seiza", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/seiza-cli/", "644"],
]

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
