[package]
name = "seiza-cli"
description = "Command-line interface for seiza: star detection, plate solving, and dataset management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["astronomy", "astrophotography", "plate-solving", "astrometry", "cli"]
categories = ["science", "command-line-utilities"]

[[bin]]
name = "seiza"
path = "src/main.rs"

[dependencies]
seiza.workspace = true
seiza-background.workspace = true
seiza-deconvolution.workspace = true
seiza-download.workspace = true
seiza-fits.workspace = true
seiza-xisf.workspace = true
seiza-satellites.workspace = true
seiza-stacking.workspace = true
seiza-stretch.workspace = true
seiza-sources.workspace = true
anyhow.workspace = true
clap.workspace = true
image = { workspace = true, features = ["png", "jpeg", "tiff"] }
imageproc.workspace = true
flate2.workspace = true
serde_json.workspace = true
serde.workspace = true
csv.workspace = true
toml.workspace = true
sha2.workspace = true
tempfile = "3"
tokio.workspace = true
ureq.workspace = true
zstd.workspace = true
font8x8.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[package.metadata.generate-rpm]
summary = "Star detection, plate solving, and astro dataset tools"
assets = [
    { source = "target/release/seiza", dest = "/usr/bin/seiza", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/seiza-cli/README.md", mode = "644", doc = true },
    { source = "LICENSE", dest = "/usr/share/licenses/seiza-cli/LICENSE", mode = "644" },
]

[package.metadata.deb]
maintainer = "Yann Ramin <github@theatr.us>"
extended-description = "Star detection, hinted and blind plate solving, and star/object dataset management for astrophotography."
section = "science"
assets = [
    ["target/release/seiza", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/seiza-cli/", "644"],
]

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
