[package]
name = "seiza-fits"
description = "Fast, dependency-free FITS image reading, statistics, and MTF autostretch for astrophotography"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["astronomy", "astrophotography", "fits", "image"]
categories = ["science", "multimedia::images", "parser-implementations"]

[dependencies]
