[package]
name = "seiza-fits"
description = "Fast FITS image I/O, statistics, and MTF autostretch for astrophotography"
version = "0.1.6"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["astronomy", "astrophotography", "fits", "image"]
categories = ["science", "multimedia::images", "parser-implementations"]

[dependencies]
multiversion = "0.8"
tempfile = "3"

[dev-dependencies]
memmap2.workspace = true
