[package]
name = "seiza-imgproc"
description = "Pure-Rust image processing primitives with OpenCV-compatible semantics: Gaussian/median blur, Canny, Otsu, binary morphology, Suzuki-Abe contours, domain transform filter, and à trous wavelets"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["image-processing", "canny", "contours", "morphology"]
categories = ["computer-vision", "science"]

[dependencies]
