[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "seiza"
description = "Star detection, WCS fitting, and hinted/blind plate solving for astrophotography"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Yann Ramin", email = "github@theatr.us" }]
requires-python = ">=3.9"
keywords = ["astronomy", "astrophotography", "plate-solving", "wcs", "astrometry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = ["numpy>=1.21"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/theatrus/seiza"
Homepage = "https://seiza.fyi"

[tool.maturin]
features = ["extension-module"]
module-name = "seiza"
