[package]
name = "seiza-satellites"
description = "Time- and observer-aware satellite track prediction for Seiza WCS solutions"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["astronomy", "satellite", "sgp4", "astrometry"]
categories = ["science"]

[dependencies]
directories.workspace = true
fs2.workspace = true
reqwest.workspace = true
satkit.workspace = true
seiza.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
