[package]
name = "seiza-satellites"
description = "Time- and observer-aware satellite track prediction for Seiza WCS solutions"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["astronomy", "satellite", "sgp4", "astrometry"]
categories = ["science"]

[dependencies]
directories.workspace = true
fs2.workspace = true
reqwest.workspace = true
satkit.workspace = true
seiza.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
zstd.workspace = true

[features]
## Serialize/Deserialize on the prediction result types for API embedding.
serde = []

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
