[package]
name = "seiza-satellites"
description = "Time- and observer-aware satellite track prediction for Seiza WCS solutions"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["astronomy", "satellite", "sgp4", "astrometry"]
categories = ["science"]

[dependencies]
directories.workspace = true
fs2.workspace = true
reqwest.workspace = true
satkit.workspace = true
seiza.workspace = true
seiza-download.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[features]
## Serialize/Deserialize on the prediction result types for API embedding.
serde = []

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
zstd.workspace = true
