[package]
name = "seiza-sources"
description = "Async acquisition of upstream astronomy catalogs used to build Seiza datasets"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["astronomy", "catalog", "gaia", "vizier"]
categories = ["science"]

[dependencies]
flate2.workspace = true
tar.workspace = true
futures-util.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
