[package]
name = "seiza-stacking"
description = "Linear calibration, registration, normalization, and live image stacking for Seiza"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["astronomy", "astrophotography", "stacking", "fits"]
categories = ["science", "multimedia::images"]

[dependencies]
rayon.workspace = true
seiza.workspace = true
seiza-fits.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
