[package]
name = "seiza-stats"
description = "Shared robust statistics for astrophotography pipelines"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["astronomy", "astrophotography", "statistics", "median"]
categories = ["science", "mathematics"]

[dependencies]
