[package]
name = "seiza-stretch"
description = "Reusable parameterized display stretching for astrophotography pipelines"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["astronomy", "astrophotography", "image", "stretch"]
categories = ["science", "multimedia::images"]

[dependencies]
rayon.workspace = true
seiza-stats.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
