[package]
name = "seiza-xisf"
description = "XISF image reading and writing for the Seiza astrophotography toolkit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["astronomy", "astrophotography", "xisf", "image"]
categories = ["science", "multimedia::images", "parser-implementations"]

[dependencies]
flate2.workspace = true
lz4_flex.workspace = true
quick-xml.workspace = true
seiza-fits.workspace = true
sha1.workspace = true
sha2.workspace = true
tempfile = "3"
thiserror.workspace = true
zstd.workspace = true
