[package]
name = "seiza"
description = "Star detection, WCS fitting, and near-field plate solving for astrophotography"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
image.workspace = true
thiserror.workspace = true
memmap2.workspace = true
rayon.workspace = true
