[package]
name = "seiza"
description = "Star detection, WCS fitting, and near-field plate solving for astrophotography"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["astronomy", "astrophotography", "plate-solving", "wcs", "astrometry"]
categories = ["science", "multimedia::images"]

[dependencies]
image.workspace = true
thiserror.workspace = true
memmap2.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
wide.workspace = true
multiversion.workspace = true
