[package]
name = "seiza"
description = "Star detection, WCS fitting, and near-field plate solving for astrophotography"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["astronomy", "astrophotography", "plate-solving", "wcs", "astrometry"]
categories = ["science", "multimedia::images"]

[features]
downloads = ["dep:seiza-download"]

[dependencies]
directories.workspace = true
image.workspace = true
thiserror.workspace = true
seiza-download = { workspace = true, optional = true }
memmap2.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
wide.workspace = true
multiversion.workspace = true
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile = "3"
